--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>新しい投稿</h1>
+<h1>投稿編集</h1>
 <%= form_with model: @post, html: {class: "form-container"} do |form| %>
 <div class="form-input">
   <%= form.label :title %> <%= form.text_field :title %>
@@ -7,6 +7,6 @@
   <%= form.label :content %> <%= form.text_area :content %>
 </div>
 <div class="button-container">
-  <%= form.submit "投稿", class: "link-button" %>
+  <%= form.submit "更新", class: "link-button" %>
 </div>
 <% end %>
